[gd_scene load_steps=8 format=3 uid="uid://xulxfupki51m"]

[ext_resource type="Theme" uid="uid://b6n1yoly1eyhl" path="res://MainTheme.tres" id="1_aifyh"]
[ext_resource type="Script" path="res://UI/MissionEndOverview/MissionEndOverview.gd" id="1_n6hbo"]
[ext_resource type="Shader" path="res://UI/MissionEndOverview/MissionEndOverview.gdshader" id="2_5gcm8"]
[ext_resource type="Texture2D" uid="uid://stpxkenrfd85" path="res://UI/MissionEndOverview/background-tiled.png" id="2_86wni"]
[ext_resource type="Texture2D" uid="uid://nxks5gqb1bov" path="res://Assets/UI/instructor-portrait.png" id="5_33di7"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_kmomd"]
shader = ExtResource("2_5gcm8")

[sub_resource type="StyleBoxLine" id="StyleBoxLine_51skd"]
color = Color(1, 1, 1, 1)
thickness = 5

[node name="MissionEndOverview" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_n6hbo")

[node name="RepeatTexture" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_kmomd")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_86wni")
stretch_mode = 1

[node name="ProfilePictureBorder" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -457.0
offset_top = -262.0
offset_right = -123.0
offset_bottom = 79.0
grow_horizontal = 0
grow_vertical = 2
color = Color(0.192938, 0.128998, 0.505263, 1)
metadata/_edit_group_ = true

[node name="ProfilePicture" type="TextureRect" parent="ProfilePictureBorder"]
layout_mode = 0
offset_left = 25.0
offset_top = -2.0
offset_right = 351.0
offset_bottom = 324.0
texture = ExtResource("5_33di7")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 104.0
offset_top = -251.0
offset_right = 472.0
offset_bottom = 108.0
grow_vertical = 2
theme_override_constants/separation = 10
metadata/_edit_group_ = true

[node name="TimeLayout" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="VBoxContainer/TimeLayout"]
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("1_aifyh")
theme_override_font_sizes/font_size = 50
text = "Time:"

[node name="ValueLabel" type="Label" parent="VBoxContainer/TimeLayout"]
layout_mode = 2
size_flags_horizontal = 10
theme = ExtResource("1_aifyh")
theme_override_font_sizes/font_size = 50
text = "100 pts"

[node name="ObjectiveLayout" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="VBoxContainer/ObjectiveLayout"]
layout_mode = 2
theme = ExtResource("1_aifyh")
theme_override_font_sizes/font_size = 50
text = "Objective:"

[node name="ValueLabel" type="Label" parent="VBoxContainer/ObjectiveLayout"]
layout_mode = 2
size_flags_horizontal = 10
theme = ExtResource("1_aifyh")
theme_override_font_sizes/font_size = 50
text = "100 PTS"

[node name="LandingLayout" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="VBoxContainer/LandingLayout"]
layout_mode = 2
theme = ExtResource("1_aifyh")
theme_override_font_sizes/font_size = 50
text = "Landing Angle:"

[node name="ValueLabel" type="Label" parent="VBoxContainer/LandingLayout"]
layout_mode = 2
size_flags_horizontal = 10
theme = ExtResource("1_aifyh")
theme_override_font_sizes/font_size = 50
text = "100 PTS"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxLine_51skd")

[node name="TotalScoreLayout" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="VBoxContainer/TotalScoreLayout"]
layout_mode = 2
theme = ExtResource("1_aifyh")
theme_override_font_sizes/font_size = 50
text = "Total :"

[node name="ValueLabel" type="Label" parent="VBoxContainer/TotalScoreLayout"]
layout_mode = 2
size_flags_horizontal = 10
theme = ExtResource("1_aifyh")
theme_override_font_sizes/font_size = 50
text = "300 PTS"

[node name="Message background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -218.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0.0123368, 0.237512, 0.328009, 1)

[node name="InstructorMessage" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -358.0
offset_top = -166.0
offset_right = 359.0
offset_bottom = -67.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("1_aifyh")
theme_override_font_sizes/font_size = 40
text = "\"By the grace of god you somehow did it. how could did you pull of something like this?\" - Claire"
horizontal_alignment = 1
autowrap_mode = 2
